--- a/1-glossary/package.json
+++ b/1-glossary/package.json
@@ -6,7 +6,7 @@
     "server-dev": "npx nodemon --watch server server/index.js",
     "client-dev": "npx webpack --watch",
     "build": "npx webpack",
-    "start": "node server/index.js"
+    "start": "nodemon server/index.js"
   },
   "license": "Unlicensed",
   "dependencies": {
@@ -18,7 +18,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^6.1.4",
-    "nodemon": "^2.0.7",
+    "nodemon": "^2.0.19",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "webpack": "^5.41.0",
